--- a/.github/workflows/build-all-ci.yml
+++ b/.github/workflows/build-all-ci.yml
@@ -19,10 +19,8 @@ jobs:
           sudo apt-get update
           sudo apt-get -y install clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev binutils coreutils desktop-file-utils fakeroot fuse libgdk-pixbuf2.0-dev patchelf python3-pip python3-setuptools squashfs-tools strace util-linux zsync
       - name: Install flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.10.1'
-          channel: 'stable'
+        shell: bash
+        run: submodules/flutter/bin/flutter doctor
       - name: Configure flutter
         shell: bash
         run: flutter config --no-analytics
