--- a/.github/workflows/build-all-ci.yml
+++ b/.github/workflows/build-all-ci.yml
@@ -22,7 +22,9 @@ jobs:
           sudo apt-get -y install clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev binutils coreutils desktop-file-utils fakeroot fuse libgdk-pixbuf2.0-dev patchelf python3-pip python3-setuptools squashfs-tools strace util-linux zsync
       - name: Install flutter
         shell: bash
-        run: submodules/flutter/bin/flutter doctor
+        run: | 
+          submodules/flutter/bin/flutter doctor
+          echo "$PWD/submodules/flutter/bin" >> $GITHUB_PATH
       - name: Configure flutter
         shell: bash
         run: flutter config --no-analytics
