--- a/.github/workflows/build-all-ci.yml
+++ b/.github/workflows/build-all-ci.yml
@@ -136,6 +136,7 @@ jobs:
         uses: tj-actions/docker-run@v2
         with:
           image: ubuntu:latest
+          name: ubuntu
           options: --rm --platform linux/arm/v7 -v $PWD:/Passy -v /home/runner/work/Passy/build:/build
           args: |
             cd Passy
