--- a/.github/workflows/build-all-ci.yml
+++ b/.github/workflows/build-all-ci.yml
@@ -140,7 +140,7 @@ jobs:
           options: --rm --platform linux/arm/v7 -v $PWD:/Passy -v /home/runner/work/Passy/build:/build
           args: |
             echo "Hello World!"
-            cd Passy
+            cd /Passy
             ls
             echo $PWD
             
