--- a/.github/workflows/build-all-ci.yml
+++ b/.github/workflows/build-all-ci.yml
@@ -137,15 +137,8 @@ jobs:
         with:
           image: ubuntu:latest
           name: ubuntu
-          options: --rm --platform linux/arm/v7 -v $PWD:/Passy -v /home/runner/work/Passy/build:/build
+          options: --rm --platform linux/arm/v7
           args: |
-            echo "Hello World!"
-            ls
-            echo $PWD
-            cd /Passy
-            ls
-            echo $PWD
-            
             # Install dependencies
             sudo apt-get update
             sudo apt-get -y install clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev binutils coreutils desktop-file-utils fakeroot fuse libgdk-pixbuf2.0-dev patchelf python3-pip python3-setuptools squashfs-tools strace util-linux zsync file unzip zip
