--- a/.github/workflows/build-all-ci.yml
+++ b/.github/workflows/build-all-ci.yml
@@ -131,44 +131,19 @@ jobs:
       - name: Create build directory
         shell: bash
         run: |
-          mkdir ../build
+          cd ..
+          mkdir build
+          mkdir bin
+          cd bin
+          wget https://raw.githubusercontent.com/GleammerRay/Passy/main/.github/workflows/armv7.sh
+          chmod +x armv7.sh
       - name: Build for ARMv7
         uses: tj-actions/docker-run@v2
         with:
           image: ubuntu:latest
           name: ubuntu
-          options: --rm --platform linux/arm/v7
-          args: |
-            # Install dependencies
-            sudo apt-get update
-            sudo apt-get -y install clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev binutils coreutils desktop-file-utils fakeroot fuse libgdk-pixbuf2.0-dev patchelf python3-pip python3-setuptools squashfs-tools strace util-linux zsync file unzip zip
-  
-            # Install dart
-            mkdir submodules/flutter/bin/cache
-            export LAST_PWD=$PWD
-            cd submodules/flutter/bin/cache
-            wget https://storage.googleapis.com/dart-archive/channels/stable/release/3.1.0/sdk/dartsdk-linux-arm-release.zip
-            unzip dartsdk-linux-arm-release.zip
-            rm dartsdk-linux-arm-release.zip
-            cd $LAST_PWD
-  
-            # Install flutter
-            submodules/flutter/bin/flutter doctor
-            export PATH="$PATH:$PWD/submodules/flutter/bin"
-  
-            # Configure flutter
-            flutter config --no-analytics
-  
-            # Build with updates popup
-            bash build_all_with_updates_popup.sh
-  
-            # Prepare releases
-            cd ..
-            mkdir -p build/linux-bundle/Passy
-            cp -r Passy/build/linux/x64/release/bundle/. build/linux-bundle/Passy
-            cp Passy/build/appimage/Passy-Latest-x86_64.AppImage build
-            chmod +x build/linux-bundle/Passy/passy
-            chmod +x build/Passy-Latest-x86_64.AppImage
+          options: --rm --platform linux/arm/v7 -v $PWD:/Passy -v /home/runner/work/Passy/build:/passy-build -v /home/runner/work/Passy/bin:/passy-bin
+          args: /passy-bin/armv7.sh
       - name: Archive Linux bundle build
         uses: thedoctor0/zip-release@0.7.1
         with:
