--- a/.github/workflows/build-all-ci.yml
+++ b/.github/workflows/build-all-ci.yml
@@ -133,6 +133,7 @@ jobs:
         run: |
           sudo dpkg --add-architecture arm64
           sudo sed -i 's/security/old-releases/g' /etc/apt/sources.list
+          sudo sed -i 's/security/old-releases/g' /etc/apt/apt-mirrors.txt
           sudo apt update
           sudo apt install libc6:arm64
       - name: Create build directory
