--- a/.github/workflows/build-all-ci.yml
+++ b/.github/workflows/build-all-ci.yml
@@ -137,6 +137,9 @@ jobs:
           cd bin
           wget https://raw.githubusercontent.com/GleammerRay/Passy/main/.github/workflows/armv7.sh
           chmod +x armv7.sh
+      - name: Install dependencies
+        shell: bash
+        run: sudo apt-get install qemu binfmt-support qemu-user-static qemu-system-arm
       - name: Build for ARMv7
         uses: tj-actions/docker-run@v2
         with:
