--- a/.github/workflows/build-all-ci.yml
+++ b/.github/workflows/build-all-ci.yml
@@ -139,7 +139,7 @@ jobs:
           chmod +x armv7.sh
       - name: Install dependencies
         shell: bash
-        run: sudo apt-get install qemu binfmt-support qemu-user-static qemu-system-arm
+        run: sudo apt install -y qemu binfmt-support qemu-user-static qemu-system-arm
       - name: Build for ARMv7
         uses: tj-actions/docker-run@v2
         with:
