--- a/.github/workflows/build-all-ci.yml
+++ b/.github/workflows/build-all-ci.yml
@@ -144,9 +144,9 @@ jobs:
         uses: thedoctor0/zip-release@0.7.1
         with:
           type: zip
-          directory: ../build/cli
+          directory: ../build
           filename: Passy-CLI-Linux-ARMv7.zip
-          path: Passy
+          path: cli
       - name: Upload Passy CLI build
         uses: actions/upload-artifact@v3
         with:
